@@ -5,6 +5,8 @@
 	(on_btn_pay_invoice_clicked): Created function to deal with
 	clicked action and pay an invoice.
 	(Pagar): Deleted function.
+	(FillPartialTree): Added function to fill treeview on partial
+	ingress for guide an invoices.
 
 	* postgres-functions.c (PagarFactura): Commented code that insert
 	data into "pagos" table. Deleted previous parameters and just use
